# covid-trackingapp

./: Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start_postgis.sh
covid_tracking/: manage.py  requirements.txt
covid_tracking/covid_tracking/: asgi.py  settings.py  urls.py  wsgi.py
covid_tracking/covid_tracking/templates/: base.html  nav.html
covid_tracking/reports/: admin.py  api.py  forms.py  models.py  serializers.py  urls.py  views.py
covid_tracking/reports/migrations/: 0001_report.py  0002_report_first_symptomatic.py  0003_report_location.py
covid_tracking/reports/templates/reports/: map.html
postgres_data/: postmaster.pid
postgres_data/base/13408/: 1247  1249  1255  1259  1259_fsm  18282  18283  18975  18984  18985  18987  18996  18997  18999  19140  19141  19143  19148  19149  19153  19156  19158  19159  19162  19164  19165  19165_vm  19168  19170  19172  19174  19176  19180  19182  19186  19188  19189  19193  19195  19196  (+228 more)
postgres_data/base/16384/: 1247  1249  1255  1255_vm  1259  16696  16697  17389  17398  17399  17401  17410  17411  17413  17554  17555  17557  17562  17563  17567  17570  17572  17573  17576  17578  17579  17579_vm  17582  17584  17586  17588  17590  17594  17596  17600  17602  17603  17607  17609  17610  (+173 more)
postgres_data/global/: 1262  2671  2964  2965  pg_control  pg_internal.init
postgres_data/pg_stat/: db_0.stat  db_13408.stat  db_16384.stat  global.stat
postgres_data/pg_stat_tmp/: db_0.stat  db_13408.stat  db_16384.stat  global.stat
postgres_data/pg_xact/: 0000
